
ArtifactsPublisher
----------------------
* Fixed a bug where a non-existant directory would result in a non-CruiseControl exception.

build.xml
----------------------
* Constrain checkstyle to only run against cruisecontrol code; ignore other packages.
* Build webapp by explicitly calling war target.  No longer default target.
* Can now override deploy.dir property to control where cruisecontrol.war ends up

main.jsp
----------------------
* Added missing call to maven.xsl.

ModificationSet
----------------------
* Added requiremodification attribute. Useful for building even when no modifications are found.

Project
----------------------
* Fixed a bug where value of buildForced was not being reset if modifications were found.
* Changed publish(Element) so an exception in one publisher will no longer prevent others from being called.

Schedule
----------------------
* Fixed a bug where checkPauseBuilders would not return a value larger than one day.
* Fixed a bug where chained pauses where not respected, with builds happening after the end of the first pause and during the second.
* Changed schedule to ignore the value of interval when there are only time based builds. This should get rid of most of the "No Builder selected" messages.
* Fixed a bug where no builder was selected on a forced build if all the builders were time based.
* Fixed a bug where time builders set for midnight would build later in the day
* Fixed a bug where a schedule with only time builds would not select a builder on a forced build if the next scheduled build time was during a pause.

Subversion
----------------------
* Added Subversion and SubversionBootstrapper - Submitted by Etienne Studer

Vss
----------------------
* Fixed a bug where a label in a root directory was showing up as a modification.

CruiseControl Release Notes - 2.1.3

log4j.properties
----------------------
* Fixed bug where the month was being used in place of minutes.